--- a/css/style.css
+++ b/css/style.css
@@ -434,8 +434,9 @@ nav img {
     top: -10px;
 }
 
-.card i {
-    font-size: 50px;
+.card svg {
+    width: 70px;
+    height: auto;
     margin-bottom: 30px;
 }
 
@@ -632,7 +633,7 @@ i.fas.fa-chevron-right {
 */
 
 #icons {
-    height: 970px;
+    height: 1010px;
     background:url("../images/construction.jpg");
     background-position: center center;
     background-repeat: no-repeat;
@@ -651,6 +652,7 @@ i.fas.fa-chevron-right {
         -ms-flex-align: center;
             align-items: center;
     padding-top: 50px;
+    margin-bottom: 50px;
 }
 
 .numbers, .numbers-item {
@@ -687,9 +689,10 @@ i.fas.fa-chevron-right {
     width: 240px;
 }
 
-.numbers-item i {
+.numbers-item svg {
     color: var(--primary);
-    font-size: 62px;
+    width: 150px;
+    height: auto;
     margin-right: 40px !important;
 }
 
@@ -749,7 +752,7 @@ i.fas.fa-chevron-right {
     width: 50px;
     height: 2px;
     left: 190px;
-    top: 60px;
+    top: 110px;
 }
 
 .future-topper h2:after {
@@ -759,7 +762,7 @@ i.fas.fa-chevron-right {
     width: 30px;
     height: 2px;
     left: 190px;
-    top: 69px;
+    top: 119px;
 }
 
 .future-icons {
@@ -981,6 +984,64 @@ i.fas.fa-chevron-right {
     top: 119px;
 }
 
+.image-wrapper {
+    margin: 40px 0;
+    width: 100%;
+    height: 250px !important;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-box-shadow: 0px 0px 13px -5px rgba(0,0,0,0.34);
+    -moz-box-shadow: 0px 0px 13px -5px rgba(0,0,0,0.34);
+    box-shadow: 0px 0px 13px -5px rgba(0,0,0,0.34);
+    box-sizing: border-box;
+}
+
+.wey {
+    position: absolute;
+    width: 300px !important;
+}
+
+.yellow {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: #fdd008;
+    opacity: .9;
+}
+
+.partner-showcase-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.partner-showcase-content h2 {
+    margin-top: 0;
+    font-size: 40px;
+}
+
+.partner-showcase-content h3 {
+    margin-top: 0;
+}
+
+.partner-showcase-content p {
+    margin-top: 0;
+}
+
+.partner-showcase-content p:first-child {
+    margin-bottom: 5px;
+    font-weight: 900;
+    font-size: 14px;
+    color: var(--primary);
+}
+
+.showcase-button {
+    width: auto;
+    margin-top: 20px;
+}
+
 .partners-logo {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -995,8 +1056,14 @@ i.fas.fa-chevron-right {
 }
 
 .partners-logo img {
-    margin: 20px auto;
+    margin: 50px auto;
     margin-bottom: 0;
+    width: 70%;
+    height: auto;
+}
+
+.partners-logo img:last-child {
+    width: 150px;
 }
 
 /* 
@@ -1232,6 +1299,7 @@ footer {
     color: var(--primary);
     margin-right: 15px;
     font-size: 20px;
+    margin-top: 5px;
 }
 
 .uppercase {
@@ -1247,9 +1315,9 @@ footer {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: flex-start;
+        -ms-flex-align: flex-start;
+            align-items: flex-start;
     margin-bottom: 20px;
 }
 
@@ -1660,7 +1728,7 @@ footer {
     }
 
     .gallery-button {
-        margin: 30px auto 90px auto !important;
+        margin: 30px auto 90px 0 !important;
         display: block;  
         width: auto !important;
         font-size: 20px;
@@ -1760,7 +1828,6 @@ footer {
                 flex-direction: row;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
-        width: auto;
         -ms-flex-pack: distribute;
             justify-content: space-around;
         -webkit-box-align: center;
@@ -2052,6 +2119,12 @@ footer {
 
     /* Top Navigation */
 
+    .icon svg {
+        width: 30px;
+        margin-right: 15px;
+        height: auto;
+    }
+
     .location {
         margin: 15px 0;
     }
@@ -2119,7 +2192,7 @@ footer {
         -webkit-clip-path: polygon(0 20%, 0 100%, 100% 100%, 100% 20%, 50% 100%);
                 clip-path: polygon(0 20%, 0 100%, 100% 100%, 100% 20%, 50% 100%);
         position: absolute;
-        bottom: 0px;
+        bottom: -2px;
     }
 
     /* 
@@ -2301,10 +2374,9 @@ footer {
                 justify-content: space-between;
     }
 
-    .icon i {
-        margin-right: 20px;
-        color: var(--primary);
-        font-size: 30px;
+    .numbers-item svg {
+        margin-right: 20px !important;
+        width: 80px;
     }
 
     .about-clippy {
@@ -2778,6 +2850,48 @@ footer {
         height: 2px;
         right: 460px;
         top: 119px;
+    }
+
+    .partner-showcase-content {
+        height: 300px;
+    }
+
+    .partner-showcase {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 50px;
+    }
+
+    .partner-showcase h2 {
+        margin-top: 0;
+    }
+
+    .partner-showcase h3,
+    .partner-showcase p {
+        width: 500px
+    }
+
+    .partner-showcase img {
+        height: auto;
+        width: 100%;
+    }
+
+    .image-wrapper {
+        position: relative;
+        height: 283px;
+        width: 350px;
+        margin-right: 50px;
+    }
+
+    .yellow {
+        height: 100% !important;
+    }
+
+    .showcase-button {
+        margin-left: 0 !important;
+        margin-bottom: 0 !important;
     }
 
     .partners-logo {
