fixed partners showcase

--- a/css/style.css
+++ b/css/style.css
@@ -2219,7 +2219,7 @@ i.fas.fa-chevron-right {
     }
 
     .partner-showcase-content {
-        height: 300px;
+        height: auto;
     }
 
     .partner-showcase {
