--- a/css/contact.css
+++ b/css/contact.css
@@ -266,6 +266,16 @@ form p{
     font-weight: 900;
     font-size: 16px;
     margin: 0;
+    background: #000;
+    color: #fff;
+}
+
+#contact button::before {
+    border-color: #000;
+}
+
+#contact button::after {
+    border-color: #000;
 }
 
 #contact button[type="submit"]:hover {
