--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -1111,6 +1111,11 @@ footer {
         position: relative;
     }
 
+    .footer-item:nth-child(2) {
+        height: 280px;
+        margin-top: 0;
+    }
+
     .footer-item h3 {
         font-size: 18px;
         margin-bottom: 10px;
