--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
                                 Landing Page
 */
 
+body, html {
+    overflow-x: hidden;
+}
+
 #landing-page {
     background:url("../images/Project-1.jpg");
     background-position: center center;
@@ -87,6 +91,7 @@
 
 #cards {
     height: 1800px;
+    position: relative;
 }
 
 .card {
@@ -212,7 +217,7 @@ i.fas.fa-chevron-right {
     100% {
         right: -5px;
       }
-  }
+}
 
 @keyframes infinite-spinning {
     0% {
@@ -225,7 +230,16 @@ i.fas.fa-chevron-right {
     100% {
         right: -5px;
       }
-  }
+}
+
+#world {
+    width: 500px;
+    position: absolute;
+    opacity: .05;
+    bottom: 150px;
+    left: -20px;
+    bottom: 0;
+}
 
 .clip-bottom {
     height: 300px;
@@ -934,6 +948,10 @@ i.fas.fa-chevron-right {
                                Landing
     */
 
+    body, html {
+        overflow-x: hidden;
+    }
+
     #landing-page {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -1003,6 +1021,14 @@ i.fas.fa-chevron-right {
     .card {
         max-width: 450px !important;
     }
+
+    #world {
+        width: 970px;
+        bottom: -250px;
+        left: -100px;
+        opacity: .05;
+    }
+
 
     /* 
                                About
@@ -1570,6 +1596,13 @@ i.fas.fa-chevron-right {
         margin: auto;
         position: relative;
         top: -100px;
+    }
+
+    #world {
+        margin: auto;
+        left: 400px;
+        width: 1100px;
+        bottom: -300px;
     }
 
     .clippy {
